--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <div class="card">
       <h4>📘 পড়ুন আমার স্টাডি ব্লগ</h4>
       <p>ছাত্রছাত্রীর সমস্যার গভীরে গিয়ে তার সহজ ও কার্যকরী সমাধান খুঁজে আনা নিয়েই এখানে লেখা হয়।</p>
-      <button class="button btn-blue" onclick="window.open('https://ko-fi.com/spmhq/posts', '_blank')">ব্লগে যান</button>
+      <button class="button btn-blue" onclick="window.open('blog.html', '_blank')">ব্লগে যান</button>
     </div>
 
     <div class="card">
